--- a/02-jenkins-docker/Jenkinsfile
+++ b/02-jenkins-docker/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        DOCKERHUB_CREDENTIALS = credentials('dockerhub')
+        DOCKERHUB_CREDENTIALS = credentials('dockerhub-credentials')
         IMAGE_NAME = 'venkataramireddy1999/flask-jenkins-docker'
     }
 
