--- a/02-jenkins-docker/Jenkinsfile
+++ b/02-jenkins-docker/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
 
     environment {
-        DOCKERHUB_CREDENTIALS = credentials('dockerhub')
         IMAGE_NAME = 'venkataramireddy1999/flask-jenkins-docker'
     }
 
@@ -14,12 +13,15 @@ pipeline {
             }
         }
 
-        stage('Change to Subdirectory') {
+        stage('Login to Docker Hub') {
             steps {
-                dir('02-jenkins-docker') {
+                withCredentials([usernamePassword(
+                    credentialsId: 'dockerhub',
+                    passwordVariable: 'DOCKER_PASSWORD',
+                    usernameVariable: 'DOCKER_USERNAME'
+                )]) {
                     bat """
-                        echo Working in: %CD%
-                        dir
+                        echo %DOCKER_PASSWORD% | docker login -u %DOCKER_USERNAME% --password-stdin
                     """
                 }
             }
@@ -30,14 +32,6 @@ pipeline {
                 dir('02-jenkins-docker') {
                     bat 'docker build -t %IMAGE_NAME%:latest .'
                 }
-            }
-        }
-
-        stage('Login to Docker Hub') {
-            steps {
-                bat """
-                    echo %DOCKERHUB_CREDENTIALS_PSW% | docker login -u %DOCKERHUB_CREDENTIALS_USR% --password-stdin
-                """
             }
         }
 
